# gupiao

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DATA_MIGRATION.md  ENGINEERING_RULES.md  Makefile  README.md  app.js  app.json  app.wxss  package-lock.json  package.json  project.config.json  project.private.config.json  pyproject.toml  v7.1 — Replay & Simulation Engine 已完成 ✅.1 — Replay & Simulation Engine 已完成 ✅.1 — Replay & Simulation Engine 已完成 ✅
.claude/: settings.json  settings.local.json
.claude/agents/: code-dev.md  main-orchestrator.md  planner.md  tester-api.md  tester-quality.md  tester-unit.md  wechat-miniprogram-reviewer.md  wechat-miniprogram-scaffold.md
.github/workflows/: ci.yml
cloudfunctions/addBaseScore/: index.js  package.json
cloudfunctions/addPurchase/: index.js  package-lock.json  package.json
cloudfunctions/addSale/: index.js  package-lock.json  package.json
cloudfunctions/addScoreRecord/: index.js  package.json
cloudfunctions/addTireSpec/: index.js  package.json
cloudfunctions/clearPurchases/: index.js  package.json
cloudfunctions/clearSales/: index.js  package.json
cloudfunctions/common/: calculator.js  constants.js  errors.js  index.js  package.json  types.js  validator.js
cloudfunctions/createRoom/: index.js  package.json
cloudfunctions/createSale/: index.js  package.json
config/: settings.py
docs/: architecture-final-v1.0.md  architecture-final.md  architecture-v1.0-patch-domain-orm.md  architecture-v1.0-patch-event-system.md  architecture-v1.0-patch-knowledge-location.md  architecture-v1.0-patch-tracecontext.md  architecture-v1.1-backlog.md  architecture-v2.md  architecture-v3.md  architecture.md  数据基础设  数据源.md
providers/: baostock.yaml  mootdx.yaml  tushare.yaml
scripts/: sync-common.js
src/: __init__.py
tests/: conftest.py  test_data_pipeline.py  test_v11_governance.py
utils/: hotel-config.js  hotel-network.js  hotel-util.js  initData.js  scanParser.js  sync.js  util.js
vscode-ext/: package-lock.json  package.json  tsconfig.json
(+368 files in other folders)
